[package]
name = "solana-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "1.18.14"
solana-sdk = "1.18.14"
hyper = "1.6.0"
dotenv = "0.15.0"
base64 = "0.21"
base58 = "0.2"
bs58 = "0.5.1"
spl-token = "4.0.0"
